--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,18 @@ body {
 	font-family: 'Inconsolata', monospace;
 	font-weight: bold;
 }
+h1 {
+	text-align: center;
+	font-size: 40px;
+	color: #e55354;
+	padding-top: 30px;
+}
+p {
+	text-align: center;
+	font-size: 20px;
+	padding-right: 200px;
+	padding-left: 200px;
+}
 
 #box {
 	width: 900px;
@@ -16,7 +28,7 @@ body {
 
 #board {
 	width: 900px;
-	margin-top: 100px;
+	margin-top: 80px;
 	margin-bottom: 50px;
 	text-align: center;
 	font-size: 48px;
@@ -27,12 +39,11 @@ body {
 	float: left;
 	width: 450px;
 	text-align: center;
-	min-height: 470px;
+	min-height: 300px;
 }
 #alphabet {
-	width: 350px;
-    padding-left: 100px;
-    padding-top: 10px;
+	width: 400px;
+    padding-left: 50px;
 }
 img {
 	width: 100%;
@@ -66,4 +77,3 @@ img {
 .reset:hover {
 	color: white;
 }
-
